# coding-tutorials

./: .gitignore  Creating_Folder_Structure.py  README.md  main.cpp
Tutorials/Flask/T05_Flask_Model_Layer/: .style.yapf  README.md  app.py  setup.cfg
python-tutorials/Airflow/: pyproject.toml  requirements.txt  topics.md
python-tutorials/Airflow/dags/: README.md
python-tutorials/Machine_Learning/: README.md  pyproject.toml  steps.md
python-tutorials/Machine_Learning/T00_Exploratory_Data_Analysis/: eda.ipynb
python-tutorials/Machine_Learning/T01_Exploratory_Data_Analysis/: eda2.ipynb
python-tutorials/Machine_Learning/T02_Linear_Regression/: housing_regression.ipynb  regression.ipynb
python-tutorials/Machine_Learning/T03_Logistic_Regression/: logistic_regression.ipynb
python-tutorials/Machine_Learning/T04_Regularization/: regularization.ipynb
python-tutorials/Machine_Learning/T05_Support_Vector_Machines/: svc.ipynb  svm.ipynb  svr.ipynb
python-tutorials/Machine_Learning/T06_Decision_Trees/: decision_tree_classifier.ipynb  decision_tree_regressor.ipynb
python-tutorials/Machine_Learning/T07_Random_Forest/: random_forest.ipynb
python-tutorials/Machine_Learning/T08_Gradient_Boosting/: gradient_boosting.ipynb
python-tutorials/Machine_Learning/T09_Stacking_Ensemble_Learning/: stacking.ipynb
python-tutorials/Machine_Learning/T10_K_Means_Clustering/: k_means.ipynb
python-tutorials/Machine_Learning/T11_Feed_Forward_Neural_Network/: feed_forward.ipynb  feed_forward_torch.ipynb
python-tutorials/Machine_Learning/T12_Convolutional_Neural_Network/: cnn.ipynb
python-tutorials/Machine_Learning/T13_Recurrent_Neural_Network/: rnn.ipynb
python-tutorials/Machine_Learning/T14_Naive_Bayes/: naive_bayes.ipynb
python-tutorials/Machine_Learning/T15_Adaboost/: adaboost.ipynb
python-tutorials/Machine_Learning/T16_Principal_Component_Analysis/: pca.ipynb
python-tutorials/Machine_Learning/T17_Linear_Discriminant_Analysis/: lda.ipynb  lda_reduction.ipynb
python-tutorials/Machine_Learning/T18_Hierarchical_Clustering/: hierarchical_clustering.ipynb
python-tutorials/Machine_Learning/T19_K_Nearest_Neighbors/: knn.ipynb
python-tutorials/Machine_Learning/T20_Long_Short_Term_Memory/: lstm.ipynb
python-tutorials/Matplotlib/: README.md  pyproject.toml
python-tutorials/Matplotlib/T01_Plotting/: bar.ipynb  boxplot.ipynb  correlogram.ipynb  histogram.ipynb  line.ipynb  new.ipynb  pairplot.ipynb  plotting.ipynb  scatter.ipynb
python-tutorials/Matplotlib/T02_Advanced_Plotting/: advanced_plotting.ipynb
python-tutorials/Matplotlib/T03_Customisation/: customisation.ipynb
python-tutorials/Matplotlib/T04_Subplots_and_Figures/: subplots_and_figures.ipynb
python-tutorials/Matplotlib/T05_3D_Plots/: 3D_plots.ipynb
python-tutorials/PySpark/: pyproject.toml
python-tutorials/PySpark/T01_Getting_Started/: getting_started.ipynb
(+1594 files in other folders)
