[tool.poetry]
name = "airflow-env"
version = "0.1.0"
description = ""
authors = ["stephenjera"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "2.9.2"
apache-airflow-providers-postgres = "^5.11.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
mlflow = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
