[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["stephenjera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
