[tool.poetry]
name = "matplotlib_venv"
version = "0.1.0"
description = ""
authors = ["stephenjera "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
