[tool.poetry]
name = "pyspark-env"
version = "0.1.0"
description = ""
authors = ["stephenjera <32124927+stephenjera@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
