  
[metadata]
name = flaskr-carved-rock
version = 1.0.0
maintainer = Chris Green
maintainer_email = hello@direct-root.com
description = The basic blog app built in the Flask tutorial, amended to demonstrate using a model layer.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
